# easylinkjobs

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .gitignore  Dockerfile  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: admin.py  ai.py  applications.py  auth.py  billing.py  candidates.py  companies.py  content.py  ingest.py  jobs.py  media.py  public.py  tracking.py  users.py
apps/api/app/core/: authz.py  config.py  db.py  rate_limit.py  redis_client.py  responses.py  security.py
apps/api/app/schemas/: auth.py  tracking.py
apps/api/app/services/: archiving.py  candidate_profile.py  encryption.py  entitlements.py
apps/api/deploy/: archive-cronjob.yaml
apps/api/easylinkjobs_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/202602270001_init/: migration.sql
apps/api/prisma/migrations/202602280001_password_reset_tokens/: migration.sql
apps/api/prisma/migrations/202602280002_company_signup_fields/: migration.sql
apps/api/prisma/migrations/202603010001_candidate_education_fields/: migration.sql
apps/api/scripts/: run_archive.py  seed_dev.py
apps/api/tests/: test_auth.py  test_content_and_filters.py  test_health.py  test_rbac.py
docs/: ADMIN.md  AI.md  API.md  ARCHITECTURE.md  ARCHIVING.md  CANDIDATE_PROFILE.md  DATABASE.md  DEPLOY_RAILWAY.md  DEPLOY_RAILWAY_API.md  DEPLOY_RAILWAY_WEB.md  DESIGN_SYSTEM.md  I18N.md  RBAC.md  (+11 more)
(+119 files in other folders)
